tests/invalid_inputs/sema/class_redefinition.cpp
// test that a class can only be defined once 
struct S {

};

class S {

};
